Bug 105798 - [CI] igt@kms-* - fail - Failed assertion: __gem_create(fd, size, &handle) == 0 - igt_kms-WARNING: connector 52/VGA-1 has no modes - random machines, random shards but only one at a time
Summary: [CI] igt@kms-* - fail - Failed assertion: __gem_create(fd, size, &handle) == ...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: highest normal
Assignee: Marta Löfstedt
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-29 06:27 UTC by Marta Löfstedt
Modified: 2018-04-25 08:31 UTC (History)
1 user (show)

See Also:
i915 platform: IVB, SNB
i915 features: display/Other


Attachments

Description Marta Löfstedt 2018-03-29 06:27:25 UTC
Starting at:

https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4004/shard-snb4/igt@kms_frontbuffer_tracking@fbcpsr-1p-offscren-pri-indfb-draw-mmap-gtt.html

(kms_frontbuffer_tracking:1331) ioctl_wrappers-CRITICAL: Test assertion failure function gem_create, file ../lib/ioctl_wrappers.c:572:
(kms_frontbuffer_tracking:1331) ioctl_wrappers-CRITICAL: Failed assertion: __gem_create(fd, size, &handle) == 0
(kms_frontbuffer_tracking:1331) ioctl_wrappers-CRITICAL: error: -22 != 0
Test kms_frontbuffer_tracking failed.

Note that igt@kms_frontbuffer_tracking@fbcpsr-1p-offscren-pri-indfb-draw-mmap-gtt has always been skipped on this machine before.

Then shard-SNB4 has very odd results on shard 3.

https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4004/shard-snb4/igt@kms_vblank@pipe-a-wait-busy.html
	
(kms_vblank:1337) igt_kms-WARNING: connector 52/VGA-1 has no modes
(kms_vblank:1337) igt_kms-CRITICAL: Test assertion failure function kmstest_dumb_create, file ../lib/igt_kms.c:610:
(kms_vblank:1337) igt_kms-CRITICAL: Failed assertion: igt_ioctl((fd), ((((2U|1U) << (((0+8)+8)+14)) | ((('d')) << (0+8)) | (((0xB2)) << 0) | ((((sizeof(struct drm_mode_create_dumb)))) << ((0+8)+8)))), (&create)) == 0
(kms_vblank:1337) igt_kms-CRITICAL: Last errno: 22, Invalid argument
(kms_vblank:1337) igt_kms-CRITICAL: error: -1 != 0
Subtest pipe-A-wait-busy failed.

Then on the following frontbuffer_tracking test we get:

(kms_frontbuffer_tracking:1391) ioctl_wrappers-CRITICAL: Test assertion failure function gem_create, file ../lib/ioctl_wrappers.c:572:
(kms_frontbuffer_tracking:1391) ioctl_wrappers-CRITICAL: Failed assertion: __gem_create(fd, size, &handle) == 0
(kms_frontbuffer_tracking:1391) ioctl_wrappers-CRITICAL: error: -22 != 0
Test kms_frontbuffer_tracking failed.

the last failing frontbuffer_tracking is:
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4004/shard-snb4/igt@kms_frontbuffer_tracking@fbcpsrdrrs-1p-primscrn-pri-shrfb-draw-mmap-cpu.html

I see nothing obvious in dmesg.
On the shards after the machine has "normal" results.

This is good to check for which tests that was in this shard:
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4004/shards.html
Comment 4 Marta Löfstedt 2018-04-04 05:34:45 UTC
Here is a new occurrence on SNB-shards CI_DRM_4017 SNB5 run 10:

https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4017/shard-snb5/igt@kms_frontbuffer_tracking@psrdrrs-1p-primscrn-cur-indfb-draw-pwrite.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4017/shard-snb5/igt@kms_frontbuffer_tracking@fbc-stridechange.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4017/shard-snb5/igt@kms_frontbuffer_tracking@fbcpsr-rgb565-draw-blt.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4017/shard-snb5/igt@kms_frontbuffer_tracking@psr-2p-scndscrn-pri-indfb-draw-render.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4017/shard-snb5/igt@kms_universal_plane@universal-plane-pipe-a-sanity.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4017/shard-snb5/igt@kms_frontbuffer_tracking@drrs-1p-primscrn-pri-indfb-draw-mmap-gtt.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4017/shard-snb5/igt@kms_frontbuffer_tracking@psr-2p-scndscrn-spr-indfb-onoff.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4017/shard-snb5/igt@kms_frontbuffer_tracking@fbcpsrdrrs-1p-indfb-fliptrack.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4017/shard-snb5/igt@kms_frontbuffer_tracking@drrs-1p-primscrn-cur-indfb-move.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4017/shard-snb5/igt@kms_frontbuffer_tracking@fbcpsrdrrs-2p-primscrn-cur-indfb-move.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4017/shard-snb5/igt@kms_frontbuffer_tracking@fbcdrrs-rgb101010-draw-pwrite.html
Comment 6 Marta Löfstedt 2018-04-06 05:50:18 UTC
Only one subtest that is usually skipped that fails:

https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4026/shard-snb3/igt@kms_frontbuffer_tracking@fbcpsr-1p-primscrn-shrfb-msflip-blt.html

check the shards.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4026/shards.html

my theory is that the issue is re-set by the next kms_flip subtest, then the rest of the shard looks OK.
Comment 7 Jani Saarinen 2018-04-06 12:06:19 UTC
Reference: https://patchwork.freedesktop.org/series/41267/
Comment 8 Marta Löfstedt 2018-04-09 07:17:30 UTC
CI_DRM_4032 shards-snb5 run 11:

https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4032/shard-snb5/igt@kms_frontbuffer_tracking@fbcpsr-1p-primscrn-pri-indfb-draw-mmap-gtt.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4032/shard-snb5/igt@kms_frontbuffer_tracking@psr-1p-primscrn-spr-indfb-onoff.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4032/shard-snb5/igt@kms_frontbuffer_tracking@fbcpsr-2p-scndscrn-spr-indfb-fullscreen.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4032/shard-snb5/igt@kms_mmap_write_crc.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4032/shard-snb5/igt@kms_frontbuffer_tracking@fbcpsr-1p-primscrn-pri-shrfb-draw-render.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4032/shard-snb5/igt@kms_frontbuffer_tracking@psr-2p-scndscrn-cur-indfb-draw-mmap-wc.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4032/shard-snb5/igt@kms_frontbuffer_tracking@fbcpsr-1p-offscren-pri-indfb-draw-blt.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4032/shard-snb5/igt@kms_vblank@pipe-b-query-forked-busy-hang.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4032/shard-snb5/igt@kms_atomic_transition@plane-all-transition-fencing.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4032/shard-snb5/igt@kms_cursor_crc@cursor-256x256-offscreen.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4032/shard-snb5/igt@kms_cursor_crc@cursor-256x256-dpms.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4032/shard-snb5/igt@kms_frontbuffer_tracking@fbc-1p-primscrn-shrfb-pgflip-blt.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4032/shard-snb5/igt@kms_frontbuffer_tracking@fbc-1p-offscren-pri-shrfb-draw-pwrite.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4032/shard-snb5/igt@kms_frontbuffer_tracking@fbc-modesetfrombusy.html
Comment 9 Marta Löfstedt 2018-04-09 07:20:23 UTC
CI_DRM_4029 shard-snb4 run 18:

https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4029/shard-snb4/igt@testdisplay.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4029/shard-snb4/igt@kms_atomic@plane_invalid_params_fence.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4029/shard-snb4/igt@kms_frontbuffer_tracking@psr-2p-primscrn-cur-indfb-draw-mmap-wc.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4029/shard-snb4/igt@kms_cursor_legacy@flip-vs-cursor-busy-crc-legacy.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4029/shard-snb4/igt@kms_frontbuffer_tracking@psr-1p-primscrn-pri-shrfb-draw-render.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4029/shard-snb4/igt@kms_frontbuffer_tracking@psr-1p-offscren-pri-indfb-draw-pwrite.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4029/shard-snb4/igt@kms_frontbuffer_tracking@psr-1p-primscrn-spr-indfb-draw-mmap-wc.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4029/shard-snb4/igt@kms_frontbuffer_tracking@psr-2p-primscrn-spr-indfb-move.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4029/shard-snb4/igt@kms_plane@pixel-format-pipe-b-planes.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4029/shard-snb4/igt@kms_vblank@pipe-a-ts-continuation-suspend.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4029/shard-snb4/igt@kms_cursor_legacy@flip-vs-cursor-busy-crc-atomic.html
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4029/shard-snb4/igt@kms_busy@extended-pageflip-modeset-hang-oldfb-render-b.html
Comment 12 Maarten Lankhorst 2018-04-11 07:48:28 UTC
commit 2c3e1ca6496de3b0377a43f4e8060cebd2c9920b
Author: Maarten Lankhorst <maarten.lankhorst@linux.intel.com>
Date:   Fri Apr 6 12:59:46 2018 +0200

    lib/igt_kms: Handle outputs with no modes better

Tests should now either not fail, or fail with WARN.
Comment 13 Marta Löfstedt 2018-04-11 08:30:31 UTC
Patch integrated to IGT_4420, since frequency of the issue is ~1/5 it will take a while to verify.
Comment 14 Marta Löfstedt 2018-04-12 07:45:18 UTC
there are more than 10 clean runs I believe this is fixed, thanks Maarten
Comment 15 Martin Peres 2018-04-20 13:03:28 UTC
It's back!

https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_23/fi-bsw-n3050/igt@kms_cursor_legacy@flip-vs-cursor-varying-size.html

(kms_cursor_legacy:1496) CRITICAL: Test assertion failure function flip_vs_cursor, file ../tests/kms_cursor_legacy.c:717:
(kms_cursor_legacy:1496) CRITICAL: Failed assertion: igt_ioctl((display->drm_fd), ((((2U|1U) << (((0+8)+8)+14)) | ((('d')) << (0+8)) | (((0xA3)) << 0) | ((((sizeof(struct drm_mode_cursor)))) << ((0+8)+8)))), (&arg[nloops & 1])) == 0
(kms_cursor_legacy:1496) CRITICAL: Last errno: 22, Invalid argument
(kms_cursor_legacy:1496) CRITICAL: error: -1 != 0
Subtest flip-vs-cursor-varying-size failed.
Comment 16 Martin Peres 2018-04-25 08:31:24 UTC
(In reply to Martin Peres from comment #15)
> It's back!
> 
> https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_23/fi-bsw-n3050/
> igt@kms_cursor_legacy@flip-vs-cursor-varying-size.html
> 
> (kms_cursor_legacy:1496) CRITICAL: Test assertion failure function
> flip_vs_cursor, file ../tests/kms_cursor_legacy.c:717:
> (kms_cursor_legacy:1496) CRITICAL: Failed assertion:
> igt_ioctl((display->drm_fd), ((((2U|1U) << (((0+8)+8)+14)) | ((('d')) <<
> (0+8)) | (((0xA3)) << 0) | ((((sizeof(struct drm_mode_cursor)))) <<
> ((0+8)+8)))), (&arg[nloops & 1])) == 0
> (kms_cursor_legacy:1496) CRITICAL: Last errno: 22, Invalid argument
> (kms_cursor_legacy:1496) CRITICAL: error: -1 != 0
> Subtest flip-vs-cursor-varying-size failed.

Moving this particular instance to https://bugs.freedesktop.org/show_bug.cgi?id=106233.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.